# dev-dock-manager-rust

./: .gitignore  README.md  dev-tool.sh  docker-compose.yml
backend/: .gitignore  Cargo.toml  Dockerfile  README.md  docker-entrypoint.sh
backend/migrations/: 20260208000000_create_users.sql
backend/src/: auth_extractor.rs  config.rs  jwt.rs  lib.rs  main.rs
backend/src/api/: auth.rs  containers.rs  images.rs  mod.rs  ports.rs
backend/src/db/: mod.rs  user.rs
backend/src/docker/: mod.rs  nvidia.rs  ports.rs
backend/src/queue/: jobs.rs  mod.rs
backend/src/ws/: console.rs  mod.rs  notifications.rs
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx
frontend/app/dashboard/containers/: page.tsx
frontend/app/login/: page.tsx
frontend/app/novnc/: page.tsx
frontend/components/console/: Terminal.tsx
frontend/components/containers/: ContainerActions.tsx  ContainerDetailsModal.tsx  ContainerTable.tsx  ImageCard.tsx  ImageDetailsModal.tsx  ImagesSection.tsx  NewContainerModal.tsx
frontend/components/layout/: Navbar.tsx
frontend/contexts/: AuthContext.tsx
frontend/hooks/: useConsoleApi.ts  useContainers.ts  useImages.ts  useNewContainerForm.ts  useNotificationsWs.ts
frontend/lib/: api.ts  auth.ts
frontend/types/: api.ts
scripts/: dev-backend-debug.sh  dev-bash.sh  dev-create-superuser.sh  dev-logs.sh  dev-supervisorctl.sh
src/backend/: settings.py  urls.py
src/xterm/: task.py  urls.py  views.py
(+1 files in other folders)
